# TP1_AEDS2

./: .gitignore  GTK  GTK.c  Parvore.c  exec  main.c  makefile  makefile copy  meson.build  pesquisa.c  ui.glade
.hs/: a.h  patricia.h
arquivoC/: busca.c  leitura.c  ocorrencias.c  palavra.c  patricia.c
entradas/: a.csv  arquivo1.txt  arquivo10.txt  arquivo11.txt  arquivo12.txt  arquivo13.txt  arquivo14.txt  arquivo2.txt  arquivo3.txt  arquivo4.txt  arquivo5.txt  arquivo6.txt  arquivo7.txt  arquivo8.txt  arquivo9.txt  ent.txt  foi.txt  leitura.py  listagemArquivos.txt  makefile  ola.txt
entradaspy/: leitura.py  oi.txt
grafica/: GTK.c
headers/: Ocorrencias.h  a.h  busca.h  include.h  leitura.h  ocorrencias.h  palavra.h  patricia.h
